fixed text overflow in small screens and picture stretching in small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,8 @@
   border-bottom-right-radius: 5%;
   padding: 2%;
   padding-bottom: 5%;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 
@@ -151,9 +153,53 @@
       .footer .col ul li {
         font-size: 13px;
       }
+      .box{
+        display: grid;
+        grid-template-columns: 2fr;
+        
+      }
+      .side{
+        background-color: #268f95;
+        height: 100%;
+        border-bottom-left-radius: 5%;
+        border-bottom-right-radius: 5%;
+        border-top-right-radius: 0%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+
+      }
+      .pic{
+        height: 100%;
+        width: 100%;
+        border-top-left-radius: 5%;
+        border-top-right-radius: 5%;
+        border-bottom-left-radius: 0%;
+        margin-top: 5%;
+      }
   }
+
+
   @media only screen and (max-width: 340px) {
     .contain{
       grid-template-columns: 1fr;
+    }
+    .box{
+      display: grid;
+      grid-template-columns: 2fr; 
+    }
+    .side{
+      background-color: #268f95;
+      height: 100%;
+      border-bottom-left-radius: 5%;
+      border-bottom-right-radius: 5%;
+      padding: 2%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+    .pic{
+      height: 100%;
+      width: 1000%;
+      border-top-left-radius: 5%;
+      border-top-right-radius: 5%;
     }
   }
